# maintainer-agent-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  workflow_request.yml
.github/workflows/: ci.yml
docs/: APPLICATION_DRAFT.md  CODEX_USAGE_EXAMPLE.md  DEMO.md  EVALUATION.md  GITHUB_IMPORT.md  MAINTAINER_CHECKLIST_EXAMPLES.md  PROVIDERS.md  PUBLICATION_CHECKLIST.md  PUBLIC_MAINTENANCE_LOG.md  PUBLISHING.md  ROADMAP.md
examples/: github-issue.json  github-pr-files.json  github-pr.json  issue.md  release-input.md
examples/maintainer-checklists/: cli-tool-pr.md  small-library-issue.md  web-app-final-audit.md  web-app-release.md
src/maintainer_agent_kit/: __init__.py  cli.py  doctor.py  github_import.py  presets.py  runner.py  workflows.py
src/maintainer_agent_kit/prompts/: audit.md  executor.md  memory.md  research.md
tests/: test_cli.py  test_docs_examples.py  test_github_import.py  test_golden_prompts.py  test_presets.py  test_workflows.py
tests/golden/contexts/: issue_triage.md  pr_review.md  release_notes.md
tests/golden/snapshots/: release_audit.txt  release_executor.txt  release_research.txt  review_audit.txt  review_executor.txt  review_research.txt  triage_audit.txt  triage_executor.txt  triage_memory.txt  triage_research.txt
