[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-agent-kit"
version = "0.2.5"
description = "Provider-neutral prompt orchestration for open-source maintainer workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Tomio Tanaka" }]
keywords = ["open-source", "maintainers", "agents", "triage", "review"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tomiotanaka/maintainer-agent-kit"
Repository = "https://github.com/tomiotanaka/maintainer-agent-kit"
Issues = "https://github.com/tomiotanaka/maintainer-agent-kit/issues"
Security = "https://github.com/tomiotanaka/maintainer-agent-kit/security/advisories"

[project.scripts]
maintainer-agent = "maintainer_agent_kit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maintainer_agent_kit = ["py.typed", "prompts/*.md"]
